@@ -1,4 +1,9 @@
 Release ...
+* tr: The highest acceptable character for complementing strings has
+  been reset from 0x10FFFF to 0xFFFF again since tr otherwise simply
+  needs to much computing time.
+
+Release 050106
 * grep: A '-z' option is now available; it decompresses compressed files and
   looks for the pattern in the plain text.
 * file: Recognizes UTF-8 encoded text now.
